k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend
spec:
  selector:
    app: python-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
